Fixed missing margins on mobile view for courses offered page (mostly by extending the methodology classes)

--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -423,50 +423,20 @@ nav a:focus {
 /*******************************************************************************
 // COURSES //
  ******************************************************************************/
-.course-container{
+.course-row{
   @extend .row;
   margin-top: 60px;
 }
 .course-text{
-	@extend .col-lg-6;
-  padding: 0em;
+    @extend .method-text;
 }
 .course-list{
-	@extend .col-lg-offset-1;
-	@extend .col-lg-12;
+	@extend .col-xs-offset-1;
+	@extend .col-xs-12;
 }
 .course-img{
 	float: left;
 	@extend .method-img;
-}
-/*******************************************************************************
-// TEACHERS //
- ******************************************************************************/
-.teacher-profile{ 
-	@extend .col-md-6;
-	img 
-	{
-		@extend .img-responsive;
-		@extend .col-md-3;
-		@extend .col-sm-4;
-		@extend .col-xs-12;
-		padding-top: 25px;
-		max-height: 200px;
-		float: left;
-	}
-	h2, p 
-	{
-		@extend .col-md-9;
-		@extend .col-sm-8;
-		@extend .col-xs-12;
-	}
-}
-.teachers-intro-img{
-  @extend .col-md-4;
-}
-.teachers-intro-text{
-  @extend .col-md-8;
-	@extend .col-xs-8;
 }
 /*******************************************************************************
 // TRAVEL //
@@ -518,6 +488,35 @@ nav a:focus {
       }
     }
   }
+}
+/*******************************************************************************
+// TEACHERS //
+ ******************************************************************************/
+.teacher-profile{ 
+	@extend .col-md-6;
+	img 
+	{
+		@extend .img-responsive;
+		@extend .col-md-3;
+		@extend .col-sm-4;
+		@extend .col-xs-12;
+		padding-top: 25px;
+		max-height: 200px;
+		float: left;
+	}
+	h2, p 
+	{
+		@extend .col-md-9;
+		@extend .col-sm-8;
+		@extend .col-xs-12;
+	}
+}
+.teachers-intro-img{
+  @extend .col-md-4;
+}
+.teachers-intro-text{
+  @extend .col-md-8;
+	@extend .col-xs-8;
 }
 /*******************************************************************************
  * CONTACT US / WORK WITH US
